app/assets/stylesheets/orders.css.scss
#order_form{

  #article_not_found {
    width: 220px;
    margin-left: 180px;
    color: #7e3535;
  }

  #archival_features {
    .hidden {
      display: none;
    }
  }

  #object_kind_select_button,
  #object_kinds_list,
  #status_select_button,
  #statuses_list {
    width: 284px;
  }

  #order_desired_date{
    width: 244px;
  }

  #client_input{
    #client_search{
      width: 420px;
    }
  }

  #order_object {
    width: 490px;
  }

  #order_quantity {
    width: 270px;
  }
}

#orders-table {
  .button_to_archive {
    margin-top: 8px;
  }

  tbody {
    tr.new > td {
      background-color: #d9edf7;
    }
    tr.pending > td {
      background-color: #fcf8e3;
    }
    tr.current > td {
      background-color: #d9edf7;
    }
    tr.done > td {
      background-color: #f9d3c6;
    }
    tr.on_the_way > td {
      background-color: #fcf8e3;
    }
    tr.canceled > td {
      background-color: #f2dede;
    }
    tr.notified > td {
      background-color: #d0e9c6;
    }
    tr.archive > td {
      background-color: #f9f9f9;
    }
    td.table-actions {
      .button_to {
        display: block;
        margin-top: 8px;
      }
    }
  }

  .order_note_column {
    width: 35%;
  }

  .last_order_note {
    cursor: pointer;
  }

  .last_order_note_full {
    cursor: pointer;
  }
}

